fix: contact timeline meta item text overflow

--- a/components/ProcessSteps/src/_StepHeading.scss
+++ b/components/ProcessSteps/src/_StepHeading.scss
@@ -7,7 +7,7 @@
   font-weight: var(--denhaag-process-steps-step-heading-font-weight);
   line-height: var(--denhaag-process-steps-step-heading-line-height);
   text-align: start;
-  word-break: var(--denhaag-process-steps-step-heading-word-break, break-word);
+  overflow-wrap: var(--denhaag-process-steps-step-heading-overflow-wrap, anywhere);
   margin-block-start: 0;
   margin-block-end: 0;
 }
